# validibot

./: .allowed_signers  .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  AGENTS.md  CLA.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMM-LICENSE.md  CONTRIBUTING.md  FAQ.md  LICENSE  Makefile  NOTICE  Procfile  README.md  RELEASING.md  SECURITY.md  THIRD_PARTY_LICENSES.dev.csv  THIRD_PARTY_LICENSES.md  THIRD_PARTY_LICENSES.runtime.csv  THIRD_PARTY_LICENSE_TEXTS.txt  VALIDATOR_ARCHITECTURE.md  conftest.py  docker-compose.docs.yml  docker-compose.local-pro.yml  docker-compose.local.yml  docker-compose.production.yml  docker-compose.self-hosted.yml  justfile  manage.py  mkdocs.dev.yml  mkdocs.user.yml  mkdocs.yml  package-lock.json  package.json  pyproject.toml  set-env.sh  temp.json  (+4 more)
.claude/: launch.json
.envs.example/: README.md
.envs.example/.local/: .build  .django  .mcp  .postgres
.envs/.local/: .postgres
.github/: dependabot.yml  pull_request_template.md
.github/DISCUSSION_TEMPLATE/: config.yml  ideas.yml  questions.yml  show-and-tell.yml  welcome.md
.github/workflows/: ci.yml  docs.yml  release.yml  scorecard.yml
.parcel-cache/: 09990183071fd94c-AssetGraph  9329c629fc727ee3-RequestGraph  b7a1db060b8654d3-BundleGraph  data.mdb  lock.mdb  snapshot-9329c629fc727ee3.txt
compose/: README.md  install-pro-package.sh
compose/common/: install-commercial-package.sh  install-published-shared.sh
compose/local/: docker-compose.integration.yml
config/: api_internal_router.py  api_router.py  asgi.py  celery_app.py  database.yml  schema.py  urls.py  urls_web.py  urls_worker.py  wsgi.py
config/settings/: README.md  base.py  local.py  local_pro.py  production.py  production_pro.py  self_hosted.py  test.py  test_pro.py
config/tests/: test_api_feature_flag.py  test_idp_pem_decoding.py  test_orphaned_validations_api_urls.py  test_runtime_version_setting.py  test_url_role_routing.py
deploy/self-hosted/: README.md  support-bundle-README.txt  support-bundle-logs-omitted.txt
django_github_app/: _sync.py  _typing.py  apps.py  models.py  routing.py  views.py
django_github_app/events/: installation.py
docs/: Makefile  README.md  conf.py  howto.rst  index.md  index.rst  make.bat  users.rst
docs/adr/: 001-validation-run-execution-via-cloud-tasks.md  2025-01-05-django-6-tasks-evaluation.md  2025-11-20-fmi-storage-and-security-review.md  2025-11-23-ephemeral-submission-retention.md  2025-11-25-issue-validation-credentials.md  2025-11-27-idempotency-keys.md  2025-11-27-notifications-invites.md  2025-11-28-invite-based-signup-and-seat-management.md  2025-11-28-pricing-system.md  2025-11-28-public-workflow-access.md  2025-12-02-heroku-to-gcp-migration.md  2025-12-04-kms-migration.md  2025-12-04-phase-4-fmi-cloud-run.md  2025-12-04-validator-job-interface.md  2025-12-1-google-platform.md  2025-12-15-free-tier-and-workflow-sharing.md  2025-12-22-cli-api-support.md  2026-01-05-validation-run-execution-via-cloud-tasks.md  2026-01-06-org-scoped-web-urls.md  2026-01-06-saas-reliability-worker-internals.md  2026-01-07-guest-management-ui.md  2026-01-08-auxiliary-files-for-workflow-submissions.md  2026-01-12-mcp-integration.md  2026-01-28-open-core-self-hosted-transformation.md  index.md
docs/adrs/: 2025-11-25-issue-validation-credentials.md
docs/data-model/: index.md  runs.md  steps.md  submissions.md
docs/dev_docs/: dashboard.md  dependency-management.md  docker.md  index.md  modal_com.md  organization_management.md  overview.md  quick_reference.md  related_libraries.md  style_guide.md  validator_jobs_cloud_run.md
docs/help_pages/: index.md
docs/how-to/: use-workflow.md
docs/plans/: pricing-system-implementation.md
docs/strategy/: conversation.md  overview.md
docs/user_docs/: api-overview.md  collaboration.md  editions.md  faq.md  getting-started.md  glossary.md  index.md  reviewing-results.md  running-validations.md  troubleshooting.md  workflow-management.md
just/: common.just  local.just
just/aws/: mod.just
just/docker-compose/: mod.just
just/gcp/: mod.just
just/local/: mod.just
just/local-cloud/: mod.just
just/local-pro/: mod.just
just/mcp/: mod.just
just/self-hosted/: mod.just
just/selfhosted/: mod.just
mcp/: pyproject.toml
mcp/src/validibot_mcp/: __init__.py  auth.py  client.py  config.py  errors.py  gating.py  license_check.py  refs.py  server.py  token_verifier.py  x402.py
mcp/src/validibot_mcp/tools/: __init__.py  runs.py  validate.py  workflows.py
mcp/tests/: conftest.py  test_auth.py  test_client.py  test_client_ref_path_traversal.py  test_e2e.py  test_enrichment.py  test_format_error.py  test_gating.py  test_license_check.py  test_oauth_audience_binding.py  test_refs.py  test_token_verifier.py  test_tools.py  test_transport_auth.py  test_two_path.py  test_x402.py  test_x402_confirmed_fields.py
requirements/: base.txt  docs.in  docs.txt  local.txt  production.txt
roscoe/: __init__.py  conftest.py
roscoe/billing/: apps.py  models.py  urls.py
roscoe/blog/: admin.py  apps.py  views.py
roscoe/core/: admin.py  apps.py  constants.py  filesafety.py  forms.py  mixins.py  models.py  views.py
roscoe/dashboard/: apps.py  urls.py  views.py
roscoe/documents/: apps.py  models.py
roscoe/events/: apps.py  constants.py  models.py
roscoe/integrations/: apps.py  models.py  urls.py
roscoe/marketing/: apps.py  urls.py  views.py
roscoe/projects/: apps.py  models.py  urls.py
roscoe/submissions/: apps.py  constants.py  ingest.py  models.py  urls.py
roscoe/templates/: 500.html  app_base.html  base.html  (+1 more)
scripts/: check_doc_links.py  check_mypy_baseline.py  generate_architecture_diagram.py  mypy_baseline.json  test_docker_runner.py
simplevalidations/: __init__.py  conftest.py
tests/: conftest.py  test_install_commercial_package_script.py  test_invite_notifications.py  test_manage.py  test_modal_connectivity.py  test_mypy_baseline.py  test_open_core_isolation.py  test_published_shared_install.py  test_self_hosted_kit.py  test_shared_dependency_policy.py
validators/: README.md
validibot/: __init__.py  conftest.py
(+2525 files in other folders)
