
# ==== Project metadata ====

[project]
name = "simplevalidations"
version = "0.1.0"
description = "A simple data validation service"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Proprietary" }
authors = [{ name = "Daniel McQuillen" }]
dependencies = [
    "argon2-cffi==25.1.0",
    "authlib==1.6.5",
    "bleach==6.3.0",
    "boto3==1.41.0",
    "cel-python==0.4.0",
    "celery==5.5.3",
    "crispy-bootstrap5==2025.6",
    "cryptography==46.0.3",
    "defusedxml==0.7.1",
    "django==5.2.8",
    "django-allauth[mfa]==65.13.0",
    "django-anymail[postmark]==13.1",
    "django-celery-beat==2.8.1",
    "django-cors-headers==4.9.0",
    "django-crispy-forms==2.5",
    "django-environ==0.12.0",
    "django-filter==25.2",
    "django-github-app==0.9.0",
    "django-markdownify==0.9.5",
    "django-model-utils==5.0.0",
    "django-redis==6.0.0",
    "django-storages[s3]==1.14.6",
    "djangorestframework==3.16.1",
    "drf-spectacular==0.29.0",
    "fmpy==0.3.26",
    "gunicorn==23.0.0",
    "hiredis==3.3.0",
    "jsonschema==4.25.1",
    "lxml==6.0.2",
    "markdown2==2.5.4",
    "modal==1.2.2",
    "nh3==0.2.18",
    "pillow==12.0.0",
    "psycopg[c]==3.3.0",
    "pydantic==2.12.4",
    "python-slugify==8.0.4",
    "redis==7.0.1",
    "sentry-sdk==2.46.0",
    "uvicorn-worker==0.4.0",
    "uvicorn[standard]==0.38.0",
    "whitenoise==6.11.0",
]

# ==== pytest ====
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--ds=config.settings.test --reuse-db --import-mode=importlib"
python_files = ["tests.py", "test_*.py"]
testpaths = [
  "tests",
  "simplevalidations",
] # exclude sibling dev repos (sv_modal_dev, sv_shared_dev) from discovery

# ignore test_use_cases
norecursedirs = [
  "sv_modal_dev",
  "sv_shared_dev",
  "tests/tests_integration", # We run these manually
]

# ==== Coverage ====
[tool.coverage.run]
include = ["simplevalidations/**"]
# We should run tests on sv_modal and sv_shared separately.
omit = ["*/migrations/*", "*/tests/*", "sv_modal_dev", "sv_shared_dev"]
plugins = ["django_coverage_plugin"]

# ==== mypy ====
[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]

[[tool.mypy.overrides]]
# Django migrations should not produce any errors:
module = "*.migrations.*"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "config.settings.test"

# ==== djLint ====
[tool.djlint]
blank_line_after_tag = "load,extends"
close_void_tags = true
format_css = true
format_js = true
# TODO: remove T002 when fixed https://github.com/djlint/djLint/issues/687
ignore = "H006,H030,H031,T002"
include = "H017,H035"
indent = 2
max_line_length = 119
profile = "django"

[tool.djlint.css]
indent_size = 2

[tool.djlint.js]
indent_size = 2

[tool.ruff]
target-version = "py312"
# Exclude a variety of commonly ignored directories.
extend-exclude = ["*/migrations/*.py", "staticfiles/*"]

[tool.ruff.lint]
select = [
  "F",
  "E",
  "W",
  "C90",
  "I",
  "N",
  "UP",
  "YTT",
  # "ANN", # flake8-annotations: we should support this in the future but 100+ errors atm
  "ASYNC",
  "S",
  "BLE",
  "FBT",
  "B",
  "A",
  "COM",
  "C4",
  "DTZ",
  "T10",
  "DJ",
  "EM",
  "EXE",
  "FA",
  'ISC',
  "ICN",
  "G",
  'INP',
  'PIE',
  "T20",
  'PYI',
  'PT',
  "Q",
  "RSE",
  "RET",
  "SLF",
  "SLOT",
  "SIM",
  "TID",
  "TC",
  "INT",
  # "ARG", # Unused function argument
  "PTH",
  "ERA",
  "PD",
  "PGH",
  "PL",
  "TRY",
  "FLY",
  # "NPY",
  # "AIR",
  "PERF",
  # "FURB",
  # "LOG",
  "RUF",
]
ignore = [
  "S101",   # Use of assert detected https://docs.astral.sh/ruff/rules/assert/
  "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
  "SIM102", # sometimes it's better to nest
  "UP038",  # Checks for uses of isinstance/issubclass that take a tuple
  # of types for comparison.
  # Deactivated because it can make the code slow:
  # https://github.com/astral-sh/ruff/issues/7871
  "TRY003",  # Use of bare except
  "EM102",
  "PT009",   # don't comment about tests using assertEqual etc
  "RET504",  #Unnecessary assignment to `filename` before `return` statement
  "ERA001",  # We want to put code in comments
  "C901",    # 'Function is too complex' ... I want to have some functions that have more than 6 args.
  "PLR0913", # Function has too many arguments (14/10)
  "BLE001",  #We want blind exceptions
  "PLR0912", # Too many branches (13/12)
  "PLR0911", # Too many statements (50/50)
  "EM101",   # Allow use of 'print' function
  "W293",    # blank line contains whitespace
  "W291",    # trailing whitespace
  "PLR0915", # Too many statements in a class (112/100)
  "RUF059",  # Allow use of dataclass with mutable default values
  "PLC0415", # Allow imports in places other than top of file
  "C416",    # Allow Unnecessary dict comprehension (rewrite using `dict()`)
  "COM812",  # Allow Trailing comma missing
  "PERF401", # Allow use of list comprehensions that could be replaced with generator expressions
  "G004",    # Allow f-strings in logging statements
]
# The fixes in extend-unsafe-fixes will require
# provide the `--unsafe-fixes` flag when fixing.
extend-unsafe-fixes = ["UP038"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.uv.sources]
sv-shared = { path = "sv_shared_dev", editable = true }

[dependency-groups]
dev = [
    "argon2-cffi==25.1.0",
    "authlib==1.6.5",
    "bleach==6.3.0",
    "boto3==1.41.0",
    "cel-python==0.4.0",
    "celery==5.5.3",
    "coverage==7.12.0",
    "crispy-bootstrap5==2025.6",
    "cryptography==46.0.3",
    "defusedxml==0.7.1",
    "django==5.2.8",
    "django-allauth[mfa]==65.13.0",
    "django-celery-beat==2.8.1",
    "django-cors-headers==4.9.0",
    "django-coverage-plugin==3.2.0",
    "django-crispy-forms==2.5",
    "django-debug-toolbar==6.1.0",
    "django-environ==0.12.0",
    "django-extensions==4.1",
    "django-filter==25.2",
    "django-github-app==0.9.0",
    "django-markdownify==0.9.5",
    "django-model-utils==5.0.0",
    "django-redis==6.0.0",
    "django-stubs[compatible-mypy]==5.2.7",
    "djangorestframework==3.16.1",
    "djangorestframework-stubs==3.16.5",
    "djlint==1.36.4",
    "drf-spectacular==0.29.0",
    "factory-boy==3.3.3",
    "fmpy==0.3.26",
    "hiredis==3.3.0",
    "ipdb==0.13.13",
    "jsonschema==4.25.1",
    "lxml==6.0.2",
    "markdown2==2.5.4",
    "mkdocs==1.6.1",
    "mkdocs-material==9.7.0",
    "mkdocs-print-site-plugin==2.8",
    "modal==1.2.2",
    "mypy==1.18.2",
    "nh3==0.2.18",
    "pillow==12.0.0",
    "pre-commit==4.5.0",
    "psycopg[c]==3.3.0",
    "pydantic==2.12.4",
    "pytest==9.0.1",
    "pytest-django==4.11.1",
    "pytest-sugar==1.1.1",
    "python-slugify==8.0.4",
    "redis==7.0.1",
    "ruff==0.14.6",
    "selenium==4.38.0",
    "sv-shared",
    "uvicorn-worker==0.4.0",
    "uvicorn[standard]==0.38.0",
    "watchfiles==1.1.1",
    "werkzeug[watchdog]==3.1.3",
    "whitenoise==6.11.0",
]
